Sun Jun  1 13:16:05 1997  Tom Tromey  <tromey@cygnus.com>

	* depend2.am (.deps/%.P): Don't generate file if MKDEP fails.
	From Alexandre Oliva.

	* depend.am (.deps/.P): Depend on PRE_BUILT_SOURCES, not
	BUILT_SOURCES.

	* automake.in (initialize_global_constants): Added 1997 to
	copyright info.

	* automake.in (output_yacc_build_rule): Never move y.tab.c over
	the .h file.  From Jim Meyering.

Thu May 29 23:16:02 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_one_configure_file): Avoid defining ACLOCAL,
	AUTOCONF, AUTOMAKE, AUTOHEADER.  From David Zaroski.

Sat Feb 22 16:05:24 1997  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>

	* Makefile.am (pkgdata_DATA): Under this new scheme, we no longer
	need compile-kr.am.  Delete it.

	* automake.in (handle_yacc_lex_cxx, get_object_extension): Use
 	_.c, _.o, _.lo instead of ._c, ._o, .l_o for de-ansification.

	* ansi2knr.c (main): Parse our arguments a little differently so
	that we don't create null output files when we can't read the
	input file.

Wed May 28 23:40:33 1997  Tom Tromey  <tromey@cygnus.com>

	* depend.am (.deps/.P): Depend on $(BUILT_SOURCES) again.  From
	Gord Matzigkeit.

Mon May 26 22:50:49 1997  Tom Tromey  <tromey@cygnus.com>

	* remake-hdr.am ($(srcdir)/@STAMP@.in): Make echo silent.  Report
	from Alexandre Oliva.

	* automake.in (generate_makefile): If --no-force, check
	Makefile.in against configure.in and aclocal.m4.  Report from
	Alexandre Oliva.

	* automake.in (handle_dist_worker): Put --include-deps on command
	line if specified originally.
	(handle_configure): Likewise.

	* configure.in: Error if Perl 5.001 is used.

	* ylwrap: Don't quote $prog when executing it.  From Jim
	Meyering.

Thu May 15 12:05:20 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_merge_targets): Set INSTALL_SCRIPT in
	install-strip target.

Tue May 13 08:20:02 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dependencies): Don't generate dependencies
	if DEP_FILES would be empty.
