@@ -1,5 +1,8 @@
 Sun Jun  1 13:16:05 1997  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_built_sources): Handle PRE_BUILT_SOURCES.
+	(handle_configure): Likewise.
+
 	* depend2.am (.deps/%.P): Don't generate file if MKDEP fails.
 	From Alexandre Oliva.
 
